User onboarding flow. Tests to be installed
